--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 	<form method='post'>
 		<div class="form-group">
 			<label for='displayName' class="">Select your display name: </label>
-			<input type='text' value='' id="displayName" class="form-control" name='displayName' size=''>
+			<input type='text' value='' id="displayName" class="form-control" name='displayName' autocomplete="off">
 			<button type='submit' class='btn btn-primary'>New Me!</button>
 		</div>
 	</form>
