--- a/templates/get_started.html
+++ b/templates/get_started.html
@@ -10,12 +10,9 @@
 			if (document.querySelector('#user')) {
 				// get user's display name
 				const displayName = document.querySelector('#user').innerText;
+				
 				// store this displayName in local storage
 				localStorage.setItem('displayName', displayName);
-
-				// remember and fill in the value when the user comes from a page other than index
-				if (document.querySelector('#user').innerText === '')
-					document.querySelector('#user').innerText = localStorage.getItem('displayName')
 			}
 		});
 </script>
@@ -28,13 +25,13 @@
 {% block main %}
 	<h1>Hello <span id="user">{{ user }}</span>! Here are some options to get started:</h1>
 	<div id="get_started_options">	
-		<form action="{{ url_for('list_of_channels') }}", method="post">
+		<form action="{{ url_for('list_of_channels') }}", method="get">
 			<div class="options form-group" id='select-channel'>
 				<p>Find existing channels depending on your interests and what you want to achieve</p>
 				<button>List of channels</button>
 			</div>
 		</form>
-		<form action="{{ url_for('create_channel') }}" method="post">
+		<form action="{{ url_for('create_channel') }}" method="get">
 			<div class="options form-group" id='create-channel'>
 				<p>Create a new channel for your team or community to work together and discuss about interesting stuff</p>
 				<button>Create new channel</button>
