--- a/templates/create_channel.html
+++ b/templates/create_channel.html
@@ -15,6 +15,10 @@
 				document.querySelector('[type=submit]').disabled = false
 			else
 				document.querySelector('[type=submit]').disabled = true
+
+			// if the user has not typed any letters, disable the prompt
+			if ((/[a-zA-z]/).test(document.querySelector('#channelName').value) == false)
+				document.querySelector('[type=submit]').disabled = true
 		}
 		// console.log("about to submit")
 		// console.log("items in localStorage: " + localStorage.getItem("channels"))
