--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,12 +6,18 @@
     <meta content="initial-scale=1, width=device-width" name="viewport"/>
     <script>
 			document.addEventListener('DOMContentLoaded', () => {
+				// If the user has not selected a username redirect him to the main page
+				if (!localStorage.getItem('displayName') && (window.location.href != "http://127.0.0.1:5000/" && window.location.href != "http://127.0.0.1:5000/get-started"))
+					window.location.replace("http://127.0.0.1:5000/");
+
 				if (document.querySelector('#user'))
 					document.querySelector("#user_nav").innerText = document.querySelector("#user").innerText
 				else 
 					document.querySelector("#user_nav").innerText = localStorage.getItem('displayName');
+
 			});
-		</script>
+	</script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 	{% block script %}{% endblock %}
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 	<title>{% block title %}{% endblock %}</title>
